Finished bar chart tutorial  for all

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<html lang="eng">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="stylesheet.css" />
-    <title>Audio Visualizer</title>
-  </head>
-  <body></body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <title>Javascript sounds</title>
+    <link rel="stylesheet" href="style.css"
+</head>
 <body>
-  <div id="container">
-    <canvas id="canvas"></canvas>
-    <audio id="audio"></audio>
-  </div>
+    <div id='container'>
+        <canvas id="canvas1"></canvas>
+        <audio id="audio1" controls></audio>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
-
